Adjust the theme to fix a few text alignment issues

--- a/css/theme.css
+++ b/css/theme.css
@@ -65,7 +65,7 @@ hr {
   left: 0;
   margin-right: .5rem;
   position: absolute;
-  top: .6em;
+  top: .4em;
 
   vertical-align: middle;
 }
